[package]
edition = "2024"
name = "summer-ai-admin"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
num-traits = "0.2"
schemars = { workspace = true, features = ["derive", "chrono04"] }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
summer = { workspace = true }
summer-ai-core = { workspace = true }
summer-ai-model = { workspace = true }
summer-auth = { workspace = true, features = ["web", "openapi"] }
summer-common = { workspace = true }
summer-sea-orm = { workspace = true, features = [
    "postgres",
    "rustls",
    "with-web",
    "with-web-openapi",
] }
summer-web = { workspace = true, features = ["openapi"] }
thiserror = { workspace = true }
validator = { workspace = true, features = ["derive"] }
