[package]
edition = "2024"
name = "summer-ai-agent"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum-client-ip = { workspace = true, features = [
    "connect-info",
    "serde",
    "forwarded-header",
] }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
reqwest = { workspace = true, features = ["rustls", "json"] }
rig-core = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
summer = { workspace = true }
summer-admin-macros = { workspace = true }
summer-ai-model = { workspace = true }
summer-auth = { workspace = true }
summer-common = { workspace = true }
summer-plugins = { workspace = true }
summer-sea-orm = { workspace = true, features = [
    "postgres",
    "rustls",
    "with-web",
    "with-web-openapi",
] }
summer-system-model = { workspace = true }
summer-web = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true, features = ["derive"] }
