[package]
edition = "2024"
name = "summer-ai-billing"
version = "0.0.1"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
schemars = { workspace = true, features = ["derive", "chrono04"] }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
summer = { workspace = true }
summer-ai-model = { workspace = true }
validator = { workspace = true, features = ["derive"] }
