[package]
edition = "2024"
name = "summer-ai-billing"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
schemars = { workspace = true, features = ["derive", "chrono04"] }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
summer = { workspace = true }
summer-ai-core = { workspace = true }
summer-ai-model = { workspace = true }
summer-common = { workspace = true }
summer-sea-orm = { workspace = true, features = ["postgres", "rustls"] }
tracing = { workspace = true }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
