[package]
edition = "2024"
name = "summer-ai-core"
version = "0.0.1"

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rust_decimal = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
