[package]
edition = "2024"
name = "summer-ai-hub"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
schemars = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
summer = { workspace = true }
summer-ai-core = { workspace = true }
summer-ai-model = { workspace = true }
summer-auth = { workspace = true, features = ["web", "openapi"] }
summer-common = { workspace = true }
summer-plugins = { workspace = true }
summer-sea-orm = { workspace = true, features = ["postgres", "rustls"] }
summer-web = { workspace = true }
tokio = { workspace = true }
tower-layer = "0.3"
tower-service = "0.3"
tracing = { workspace = true }
