[package]
edition = "2024"
name = "summer-ai-model"
version = "0.0.1"

[dependencies]
async-trait = { workspace = true }
axum-valid = { workspace = true }
bigdecimal = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
ipnetwork = { workspace = true, features = ["serde"] }
num-traits = "0.2"
schemars = { workspace = true, features = ["derive", "chrono04"] }
sea-orm = { workspace = true, features = [
    "with-chrono",
    "with-time",
    "with-json",
    "postgres-vector",
    "postgres-array",
    "debug-print",
    "with-ipnetwork",
    "with-bigdecimal",
    "entity-registry",
    "schema-sync",
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr.workspace = true
summer-common = { workspace = true }
summer-sea-orm = { workspace = true, features = ["postgres", "rustls"] }
validator = { workspace = true, features = ["derive"] }
