[package]
edition = "2024"
name = "summer-ai-relay"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
summer = { workspace = true }
summer-ai-billing = { workspace = true }
summer-ai-core = { workspace = true, features = ["axum"] }
summer-ai-model = { workspace = true }
summer-common = { workspace = true }
summer-plugins = { workspace = true }
summer-sea-orm = { workspace = true, features = [
    "postgres",
    "rustls",
    "with-web",
    "with-web-openapi",
] }
summer-web = { workspace = true, features = ["openapi"] }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
