[package]
edition = "2024"
name = "summer-ai-relay"
version = "0.0.1"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
axum-extra = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
rust_decimal = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
summer = { workspace = true }
summer-admin-macros = { workspace = true }
summer-ai-billing = { workspace = true }
summer-ai-core = { workspace = true }
summer-ai-model = { workspace = true }
summer-auth = { workspace = true }
summer-common = { workspace = true }
summer-plugins = { workspace = true }
summer-redis = { workspace = true }
summer-sea-orm = { workspace = true, features = ["postgres", "rustls"] }
summer-web = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
